--- a/Areas/Farmer/Views/FarmerShop/AddProduct.cshtml
+++ b/Areas/Farmer/Views/FarmerShop/AddProduct.cshtml
@@ -4,148 +4,149 @@
 }
 <br />
 
-<h3 class="text-info">Add New Product</h3>
-<form asp-action="AddProduct" method="post" enctype="multipart/form-data">
+<div class="container my-4">
+    <div class="row justify-content-center">
+        <div class="col-lg-8">
+        
+            <form asp-action="AddProduct" method="post" enctype="multipart/form-data">
+                <div class="card p-4 rounded border">
+                    <h3 class="text-info mb-2  text-center">Add New Product</h3>
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-    <div class="p-4 rounded border">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="row">
+                        <!-- Left Section: Product Information -->
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label asp-for="Name"></label>
+                                <input asp-for="Name" class="form-control" />
+                                <span asp-validation-for="Name" class="text-danger"></span>
+                            </div>
 
+                            <div class="form-group">
+                                <label asp-for="Price"></label>
+                                <input asp-for="Price" class="form-control" />
+                                <span asp-validation-for="Price" class="text-danger"></span>
+                            </div>
 
+                            <div class="form-group">
+                                <label asp-for="Description"></label>
+                                <textarea asp-for="Description" class="form-control"></textarea>
+                                <span asp-validation-for="Description" class="text-danger"></span>
+                            </div>
 
-        <div class="form-group row">
-            <div class="col-lg-2">
-                <label asp-for="Name"></label>
-            </div>
-            <div class="col-lg-5">
-                <input asp-for="Name" class="form-control" />
-            </div>
-            <span asp-validation-for="Name" class="text-danger"></span>
+                            <div class="form-group">
+                                <label asp-for="Quantity"></label>
+                                <input asp-for="Quantity" class="form-control" />
+                                <span asp-validation-for="Quantity" class="text-danger"></span>
+                            </div>
+
+                            <div class="form-group">
+                                <label asp-for="QuantityType"></label>
+                                <select asp-for="QuantityType" asp-items="Html.GetEnumSelectList<QuantityType>()" class="form-control"></select>
+                                <span asp-validation-for="QuantityType" class="text-danger"></span>
+                            </div>
+
+                            <div class="form-group mt-2 mb-2">
+                                <label asp-for="PreservationRequired"></label>
+                                <input asp-for="PreservationRequired" style="height: 15px;width: 15px" class="form-check-input" type="checkbox" />
+                                <span asp-validation-for="PreservationRequired" class="text-danger"></span>
+                            </div>
+                            <div class="form-group mt-2 mb-2">
+                                <label asp-for="IsAvailable"></label>
+                                <input asp-for="IsAvailable" class="form-check-input" style="height: 15px;width: 15px" type="checkbox" />
+                                <span asp-validation-for="IsAvailable" class="text-danger"></span>
+                            </div>
+                        </div>
+
+                      
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label asp-for="ImagesSmall">Images</label>
+                                <input asp-for="ImagesSmall" class="form-control" type="file" multiple onchange="previewImages(event)" />
+                                <div id="imagePreview" class="d-flex flex-wrap mt-2"></div>
+                                <span asp-validation-for="ImagesSmall" class="text-danger"></span>
+                            </div>
+
+                            <div class="form-group mt-2">
+                                <label asp-for="ExpirationTime"></label>
+                                <input asp-for="ExpirationTime" class="form-control" type="date" />
+                                <span asp-validation-for="ExpirationTime" class="text-danger"></span>
+                            </div>
+
+                          
+
+                            <div class="form-group mt-2">
+                                <label asp-for="ProductTypeId">Category</label>
+                                <select asp-for="ProductTypeId" asp-items="ViewBag.productTypeId" class="form-control custom-select"></select>
+                                <span asp-validation-for="ProductTypeId" class="text-danger"></span>
+                            </div>
+
+                            <div class="form-group mt-2">
+                                <label asp-for="SpecialTagId">Special Tag</label>
+                                <select asp-for="SpecialTagId" asp-items="ViewBag.TagId" class="form-control custom-select"></select>
+                                <span asp-validation-for="SpecialTagId" class="text-danger"></span>
+                            </div>
+                           
+
+                            <div class="form-group text-right mt-5 mb-5" style="margin-left:25px">
+                                <input type="submit" class="btn btn-primary" value="Add Product" />
+                                <a asp-action="Index" style="margin-left:5px" class="btn btn-secondary">Back to List</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
         </div>
-
-        <div class="form-group row">
-            <div class="col-lg-2">
-                <label asp-for="Price"></label>
-            </div>
-            <div class="col-lg-5">
-                <input asp-for="Price" class="form-control" />
-            </div>
-            <span asp-validation-for="Price" class="text-danger"></span>
-        </div>
-
-
-        <div class="form-group row">
-            <div class="col-lg-2">
-                <label asp-for="ImagesSmall"></label>
-            </div>
-            <div class="col-lg-5">
-                <input asp-for="ImagesSmall" class="form-control" type="file" multiple />
-            </div>
-            <span asp-validation-for="ImagesSmall" class="text-danger"></span>
-        </div>
-
-        <div class="form-group row">
-            <div class="col-lg-2">
-                <label asp-for="Description"></label>
-            </div>
-            <div class="col-lg-5">
-                <input asp-for="Description" class="form-control" />
-            </div>
-            <span asp-validation-for="Description" class="text-danger"></span>
-        </div>
-
-        <div class="form-group row">
-            <div class="col-lg-2">
-                <label asp-for="Quantity"></label>
-            </div>
-            <div class="col-lg-5">
-                <input asp-for="Quantity" class="form-control" />
-            </div>
-            <span asp-validation-for="Quantity" class="text-danger"></span>
-        </div>
-
-        <div class="form-group row">
-            <div class="col-lg-2">
-                <label asp-for="QuantityType"></label>
-            </div>
-            <div class="col-lg-5">
-                <select asp-for="QuantityType" asp-items="Html.GetEnumSelectList<QuantityType>()" class="form-control"></select>
-            </div>
-            <span asp-validation-for="QuantityType" class="text-danger"></span>
-        </div>
-
-
-        <div class="form-group row">
-            <div class="col-lg-2">
-                <label asp-for="ExpirationTime"></label>
-            </div>
-            <div class="col-lg-5">
-                <input asp-for="ExpirationTime" class="form-control" type="date" />
-            </div>
-         
-            <span asp-validation-for="ExpirationTime" class="text-danger"></span>
-        </div>
-
-
-        <div class="form-group row">
-            <div class="col-lg-2">
-                <label asp-for="PreservationRequired"></label>
-            </div>
-            <div class="col-lg-5">
-                <input asp-for="PreservationRequired" class="" type="checkbox" />
-            </div>
-            <span asp-validation-for="PreservationRequired" class="text-danger"></span>
-        </div>
-
-
-
-        <div class="form-group row">
-            <div class="col-lg-2">
-                <label asp-for="ProductTypeId"></label>
-            </div>
-            <div class="col-lg-5">
-                <select asp-for="ProductTypeId" asp-items="ViewBag.productTypeId" class="form-control"></select>
-
-            </div>
-            <span asp-validation-for="ProductTypeId" class="text-danger"></span>
-        </div>
-
-        <div class="form-group row">
-            <div class="col-lg-2">
-                <label asp-for="SpecialTagId"></label>
-            </div>
-            <div class="col-lg-5">
-                <select asp-for="SpecialTagId" asp-items="ViewBag.TagId" class="form-control"></select>
-
-            </div>
-            <span asp-validation-for="SpecialTagId" class="text-danger"></span>
-        </div>
-
-        <div class="form-group row">
-            <div class="col-lg-2">
-                <label asp-for="IsAvailable"></label>
-            </div>
-            <div class="col-lg-5">
-                <input asp-for="IsAvailable" class="" type="checkbox" />
-            </div>
-            <span asp-validation-for="IsAvailable" class="text-danger"></span>
-        </div>
-
-
-
-        <div class="form-group">
-            <input type="submit" class="btn btn-primary" value="Save" />
-            <a asp-action="Index" class="btn btn-success">Back to List</a>
-        </div>
-
-
     </div>
-    <div class="col-lg-2"></div>
-</form>
-<div class="col-lg-2"></div>
+</div>
+@section Scripts {
+    <script>
+        function previewImages(event) {
+            var files = event.target.files;
+            var preview = document.getElementById('imagePreview');
+            preview.innerHTML = '';
 
-@section Scripts{
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+            for (var i = 0; i < files.length; i++) {
+                (function (fileIndex) {
+                    var imgWrapper = document.createElement('div');
+                    imgWrapper.style.position = 'relative';
+                    imgWrapper.style.display = 'inline-block';
+                    imgWrapper.style.margin = '10px';
+
+                    var img = document.createElement('img');
+                    img.src = URL.createObjectURL(files[fileIndex]);
+                    img.classList.add('img-thumbnail');
+                    img.style.height = '60px';
+                    img.style.width = '70px';
+                    img.style.objectFit = 'cover';
+                    imgWrapper.appendChild(img);
+
+                    var removeBtn = document.createElement('button');
+                    removeBtn.innerHTML = '&#10006;';
+                    removeBtn.classList.add('btn', 'btn-sm');
+                    removeBtn.style.position = 'absolute';
+                    removeBtn.style.top = '5px';
+                    removeBtn.style.right = '5px';
+                    removeBtn.style.backgroundColor = 'rgba(255, 0, 0, 0.5)';
+                    removeBtn.style.border = 'none';
+                    removeBtn.style.color = 'white';
+                    removeBtn.style.borderRadius = '50%';
+                    removeBtn.style.padding = '2px';
+                    removeBtn.style.cursor = 'pointer';
+                    removeBtn.onclick = function () {
+                        var dt = new DataTransfer();
+                        for (var j = 0; j < files.length; j++) {
+                            if (fileIndex !== j) dt.items.add(files[j]);
+                        }
+                        document.querySelector('input[type=file]').files = dt.files;
+                        preview.removeChild(imgWrapper);
+                    };
+
+                    imgWrapper.appendChild(removeBtn);
+                    preview.appendChild(imgWrapper);
+                })(i);
+            }
+        }
+    </script>
 }
 
