--- a/Areas/Farmer/Views/FarmerShop/ProductDelete.cshtml
+++ b/Areas/Farmer/Views/FarmerShop/ProductDelete.cshtml
@@ -4,101 +4,116 @@
 }
 <br />
 
-<h4 class="text-info">Product Delete</h4>
 
-<br />
 
-<form asp-action="ProductDelete" method="post" enctype="multipart/form-data">
-    <div class="p-4 rounded border row">
-        <div asp-validation-summary="ModelOnly" class="text-danger">
-        </div>
-        <div class="col-lg-8">
-            <div class="form-group row">
-                <div class="col-lg-4">
-                    <label asp-for="Name"></label>
+<form asp-action="ProductDelete" method="post" enctype="multipart/form-data" style="margin-left:30px;margin-right:30px; padding:30px">
+
+    <div class="card p-4 text-center justify-content-center" style="margin-left:20px;margin-right:20px">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <h3 class="text-infoffcanvas mt-2 mb-4">Product Delete</h3>
+        <div class="row mt-5">
+            <div class="col-lg-6">
+                <div class="main-img">
+                    @if (Model.ImagesSmall != null && Model.ImagesSmall.Any())
+                    {
+                        <img class="img-fluid main-image" src="~/@Model.ImagesSmall.FirstOrDefault()?.ImagePath" style="height:280px; width:60%; border-radius: 2px; border: 1px solid #efefef" alt="ProductS">
+                    }
+
+                    <div class="row my-4 text-center justify-content-center">
+                        @foreach (var image in Model.ImagesSmall.Skip(1))
+                        {
+                            <div class="col-3">
+                                <img class=" preview-image" src="~/@image.ImagePath" style="height:80px; font-weight:80px; border-radius: 2px; border: 1px solid #efefef" alt="Preview">
+                            </div>
+                        }
+                    </div>
                 </div>
-                <div class="col-lg-8">
-                    <input type="hidden" asp-for="Id" />
-                    <input asp-for="Name" readonly="readonly" class="form-control" />
-                </div>
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group row">
-                <div class="col-lg-4">
-                    <label asp-for="Price"></label>
-                </div>
-                <div class="col-lg-8">
-                    <input asp-for="Price" readonly="readonly" class="form-control" />
-                </div>
-                <span asp-validation-for="Price" class="text-danger"></span>
             </div>
 
-
-
-            <div class="form-group row">
-                <div class="col-lg-4">
-                    <label asp-for="Description"></label>
+            <div class="col-lg-6">
+                <div class="form-group row mt-2">
+                    <label asp-for="Name" class="col-form-label col-lg-4"></label>
+                    <div class="col-lg-8">
+                        <input type="hidden" asp-for="Id" />
+                        <input asp-for="Name" readonly="readonly" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
+                    </div>
                 </div>
-                <div class="col-lg-8">
-                    <input asp-for="Description" readonly="readonly" readonly="readonly" class="form-control" />
+
+                <div class="form-group row mt-2">
+                    <label asp-for="Price" class="col-form-label col-lg-4"></label>
+                    <div class="col-lg-8">
+                        <input asp-for="Price" readonly="readonly" class="form-control" />
+                        <span asp-validation-for="Price" class="text-danger"></span>
+                    </div>
                 </div>
-                <span asp-validation-for="Description" class="text-danger"></span>
+
+                <div class="form-group row mt-2">
+                    <label asp-for="Description" class="col-form-label col-lg-4"></label>
+                    <div class="col-lg-8">
+                        <input asp-for="Description" readonly="readonly" class="form-control" />
+                        <span asp-validation-for="Description" class="text-danger"></span>
+                    </div>
+                </div>
+
+                <div class="form-group row mt-2">
+                    <label asp-for="Quantity" class="col-form-label col-lg-4"></label>
+                    <div class="col-lg-8">
+                        <input asp-for="Quantity" readonly="readonly" class="form-control" />
+                        <span asp-validation-for="Quantity" class="text-danger"></span>
+                    </div>
+                </div>
+
+                <div class="form-group row mt-2">
+                    <label asp-for="ProductTypeId" class="col-form-label col-lg-4"></label>
+                    <div class="col-lg-8">
+                        <select asp-for="ProductTypeId" asp-items="ViewBag.productTypeId" readonly="readonly" class="form-control"></select>
+                        <span asp-validation-for="ProductTypeId" class="text-danger"></span>
+                    </div>
+                </div>
+
+                <div class="form-group row mt-2">
+                    <label asp-for="SpecialTagId" class="col-form-label col-lg-4"></label>
+                    <div class="col-lg-8">
+                        <select asp-for="SpecialTagId" asp-items="ViewBag.TagId" readonly="readonly" class="form-control"></select>
+                        <span asp-validation-for="SpecialTagId" class="text-danger"></span>
+                    </div>
+                </div>
+
+                <div class="form-group row mt-2">
+                    <label asp-for="IsAvailable" class="col-form-label col-lg-4"></label>
+                    <div class="col-lg-8">
+                        <input asp-for="IsAvailable" disabled="disabled" class="" type="checkbox" />
+                        <span asp-validation-for="IsAvailable" class="text-danger"></span>
+                    </div>
+                </div>
+
+                <div class="form-group row mt-2">
+                    <label class="col-form-label col-lg-4">Expires On</label>
+                    <div class="col-lg-8">
+                        @{
+                            TimeSpan difference = Model.ExpirationTime - DateTime.Now;
+                            int d = (int)difference.TotalDays;
+                            int hours = difference.Hours;
+                            int minutes = difference.Minutes;
+                            int seconds = difference.Seconds;
+                        }
+                        <span>@d D @hours H @minutes Min</span>
+                    </div>
+                </div>
             </div>
+    
 
-
-            <div class="form-group row">
-                <div class="col-lg-4">
-                    <label asp-for="Quantity"></label>
-                </div>
-                <div class="col-lg-8">
-                    <input asp-for="Quantity" readonly="readonly" readonly="readonly" class="form-control" />
-                </div>
-                <span asp-validation-for="Quantity" class="text-danger"></span>
-            </div>
-
-
-            <div class="form-group row">
-                <div class="col-lg-4">
-                    <label asp-for="ProductTypeId"></label>
-                </div>
-                <div class="col-lg-8">
-
-                    <input asp-for="ProductTypeId" readonly="readonly" class="form-control" />
-                </div>
-                <span asp-validation-for="ProductTypeId" class="text-danger"></span>
-            </div>
-            <div class="form-group row">
-                <div class="col-lg-4">
-                    <label asp-for="SpecialTagId"></label>
-                </div>
-                <div class="col-lg-8">
-
-                    <input asp-for="SpecialTagId" readonly="readonly" class="form-control" />
-                </div>
-                <span asp-validation-for="SpecialTagId" class="text-danger"></span>
-            </div>
-            <div class="form-group row">
-                <div class="col-lg-4">
-                    <label asp-for="IsAvailable"></label>
-                </div>
-                <div class="col-lg-8">
-                    <input asp-for="IsAvailable" disabled="disabled" class="" type="checkbox" />
-                </div>
-                <span asp-validation-for="IsAvailable" class="text-danger"></span>
-            </div>
             <div class="form-group">
-                <h3>Do you want to delete this product ?</h3>
+                <h4>Do you want to delete this product ?</h4>
                 <input type="submit" asp-action="ProductDelete" asp-route-id="@Model.Id" class="btn btn-danger" value="Product Delete" />
                 <a asp-action="Index" class="btn btn-success">Back to Shop</a>
             </div>
 
-        </div>
-        <div class="col-lg-1"></div>
-        <div class="col-lg-3">
-            <img src="~/@Model.Image" style="height:280px  ;width:100%; border-radius: 5px;border: 1px solid #efefef" />
-        </div>
 
-    </div>
+        </div>
+        </div>
+ 
 </form>
 
 @section Scripts{
